--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Neha Yawalkar
  
 Further Information:
 http://cns.utexas.edu/fri
@@ -17,7 +17,7 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
+The goal of this assignment is to develop skills in using <canvas> elements, to be used in further diagnostic apps. 
  
 Known Issues:
 blah, blah, blah, blah
@@ -38,6 +38,19 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 var docMod = document.lastModified; // loads last modified time stamp into docMod variable
 alert("This file last modified " + docMod); // generates alert box with time stamp. If annoying, comment out this entire line.
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
+	
+function draw_a() {
+	var a_canvas = document.getElementById("a");
+	var a_context = a_canvas.getContext("2d");
+	a_context.fillRect(50, 25, 150, 100);
+
+
+}
+	
+	
+	
+	
+	
 </script>
 
 
@@ -73,6 +86,54 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+	
+	<!-- this line creates the canvas, defines its dimensions, and pains a border around it-->
+	<canvas id="a" width = "200" height = "500" style = "border: 1px solid #000000;"></canvas>
+	
+	<!-- this line calls the function that will draw a rectangle in the canvas-->
+	draw_a;
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	<!-- 
+	how to clear canvas: a_canvas.width = a_canvas.width; 
+	or
+	clearRect (x, y, width, height) clears specific rectangular region on canvas
+	-->
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
