testing dimensions for phone screen

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ function draw_a() {
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 	
 	<!-- this line creates the canvas, defines its dimensions, and pains a border around it-->
-	<canvas id="a" width = "200" height = "500" style = "border: 1px solid #000000;"></canvas>
+	<canvas id="a" width = "90%" height = "50%" style = "border: 1px solid #000000;"></canvas>
 	
 	<!-- this line calls the function that will draw a rectangle in the canvas-->
 	draw_a;
