testing call of draw_a(); function

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ function draw_a() {
 	<canvas id="a" width = "300" height = "300" style = "border: 1px solid #000000;"></canvas>
 	
 	<!-- this line calls the function that will draw a rectangle in the canvas-->
-	draw_a;
+	draw_a();
 	
 	
 	
