--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ function draw_a() {
 	<!-- this line creates the canvas, defines its dimensions, and pains a border around it-->
 	<canvas id="a" width = "300" height = "300" style = "border: 1px solid #000000;"></canvas>
 	
-	<!-- this line calls the function that will draw a rectangle in the canvas-->
-	draw_a();
+	<!-- this line creates a button calls the function draw_a when clicked-->
+	<input type="button" onclick="draw_a()" value="Draw rectangle">
 	
 	
 	
