testing padding-bottom: 50px formatting <style>

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Brief Description of Goal of Code:
 The goal of this assignment is to develop skills in using <canvas> elements, to be used in further diagnostic apps. 
  
 Known Issues:
-blah, blah, blah, blah
+- Footer was overlapping with content at bottom, such as rectangle and button. 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
@@ -58,6 +58,7 @@ function draw_a() {
 <style>	
 .body {
      margin: 0em;
+	padding-bottom: 50px;
 }
 .page {
     width: 100vw;
