New issue: button adjacent to canvas

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ The goal of this assignment is to develop skills in using <canvas> elements, to 
  
 Known Issues:
 - Footer was overlapping with content at bottom, such as rectangle and button. 
+- On laptop, Draw rectangle appears adjacent to canvas
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
 -->
