--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@ console.log("This file last modified " + docMod); // generates message in javaSc
 function draw_a() {
 	var a_canvas = document.getElementById("a");
 	var a_context = a_canvas.getContext("2d");
+	a_context.fillStyle = "#000000";
 	a_context.fillRect(50, 25, 150, 100);
 }
 	
