set a_name() fillStyle to "white"

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@ function draw_a() {
 	
 function name_a() {
 	a_context.font = "bold 12px sans-serif";
+	a_context.fillStyle = "white";
 	a_context.textAlign = "center";
 	a_context.textBaseline = "middle";
 	a_context.fillFont("Neha Yawalkar", 50, 25);
