a_name() "fillFont" -> "fillText"

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ function name_a() {
 	a_context.fillStyle = "white";
 	a_context.textAlign = "center";
 	a_context.textBaseline = "middle";
-	a_context.fillFont("Neha Yawalkar", 50, 25);
+	a_context.fillText("Neha Yawalkar", 50, 25);
 }
 	
 	
