--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@ function draw_a() {
 }
 	
 function name_a() {
-	a_context.font = "bold 12px sans-serif";
-	a_context.fillStyle = "white";
+	//a_context.font = "bold 12px sans-serif";
+	a_context.fillStyle = "black";
 	a_context.textAlign = "center";
 	a_context.textBaseline = "middle";
-	a_context.fillText("Neha Yawalkar", 50, 25);
+	a_context.fillText("Neha Yawalkar", 300, 200);
 }
 	
 	
