--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 	
 	
+
 var a_canvas = document.getElementById("a");
-var a_context = a_canvas.getContext("2d");
+var a_context = a_canvas.getContext("2d");	
 	
 function draw_a() {
 	
@@ -53,9 +54,21 @@ function draw_a() {
 function name_a() {
 	//a_context.font = "bold 12px sans-serif";
 	a_context.fillStyle = "black";
-	a_context.textAlign = "center";
-	a_context.textBaseline = "middle";
+	//a_context.textAlign = "center";
+	//a_context.textBaseline = "middle";
 	a_context.fillText("Neha Yawalkar", 125, 75);
+	
+}
+	
+function image_a() {
+	var img = new Image();
+	img.src = "utLogo.png";
+	img.onload = function() {
+		a_context.drawImage(img, 200, 25);
+	}
+		
+	
+}
 	
 
 	
@@ -110,7 +123,7 @@ function name_a() {
 	<input type="button" onclick="name_a()" value="Print name">
 	
 	<!-- this line creates a button calls the function image_a when clicked-->
-	<input type="button" onclick="image_a()" value="Print name">
+	<input type="button" onclick="image_a()" value="Show image">
 	
 	
 	
