--- a/index.html
+++ b/index.html
@@ -46,12 +46,15 @@ var a_canvas = document.getElementById("a");
 var a_context = a_canvas.getContext("2d");	
 	
 function draw_a() {
-	
+	var a_canvas = document.getElementById("a");
+	var a_context = a_canvas.getContext("2d");
 	a_context.fillStyle = "orange";
 	a_context.fillRect(50, 25, 150, 100);
 }
 	
 function name_a() {
+	var a_canvas = document.getElementById("a");
+	var a_context = a_canvas.getContext("2d");
 	//a_context.font = "bold 12px sans-serif";
 	a_context.fillStyle = "black";
 	//a_context.textAlign = "center";
@@ -61,6 +64,8 @@ function name_a() {
 }
 	
 function image_a() {
+	var a_canvas = document.getElementById("a");
+	var a_context = a_canvas.getContext("2d");
 	var img = new Image();
 	img.src = "utLogo.png";
 	img.onload = function() {
