reinsert textAlign and textBaseline to name_a()

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@ function name_a() {
 	var a_context = a_canvas.getContext("2d");
 	//a_context.font = "bold 12px sans-serif";
 	a_context.fillStyle = "black";
-	//a_context.textAlign = "center";
-	//a_context.textBaseline = "middle";
+	a_context.textAlign = "center";
+	a_context.textBaseline = "middle";
 	a_context.fillText("Neha Yawalkar", 125, 75);
 	
 }
