--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@ alert("This file last modified " + docMod); // generates alert box with time sta
 console.log("This file last modified " + docMod); // generates message in javaScript console (found in developers tools) with time stamp. 
 	
 var a_canvas = document.getElementById("a");
-	var a_context = a_canvas.getContext("2d");	
-
-var a_canvas = document.getElementById("a");
 var a_context = a_canvas.getContext("2d");	
+
+const a_canvas = document.getElementById("a");
+const a_context = a_canvas.getContext("2d");	
 	
 function draw_a() {
 	//var a_canvas = document.getElementById("a");
