--- a/index.html
+++ b/index.html
@@ -72,6 +72,14 @@ function image_a() {
 	}	
 }
 	
+function clear_a() {
+	var a_canvas = document.getElementById("a");
+	var a_context = a_canvas.getContext("2d");
+	a_canvas.width = a_canvas.width; 
+	
+}
+	
+
 
 	
 	
@@ -118,15 +126,17 @@ function image_a() {
 	<!-- this line creates the canvas, defines its dimensions, and pains a border around it-->
 	<canvas id="a" width = "300" height = "300" style = "border: 1px solid #000000;"></canvas>
 	
-	<!-- this line creates a button calls the function draw_a when clicked-->
+	<!-- this line creates a button calls the function draw_a() when clicked-->
 	<input type="button" onclick="draw_a()" value="Draw rectangle">
 	
-	<!-- this line creates a button calls the function name_a when clicked-->
+	<!-- this line creates a button calls the function name_a() when clicked-->
 	<input type="button" onclick="name_a()" value="Print name">
 	
-	<!-- this line creates a button calls the function image_a when clicked-->
+	<!-- this line creates a button calls the function image_a() when clicked-->
 	<input type="button" onclick="image_a()" value="Show image">
 	
+	<!-- this line creates a button calls the function clear_a() when clicked-->
+	<input type="button" onclick="clear_a()" value="Clear canvas">
 	
 	
 	
@@ -151,11 +161,7 @@ function image_a() {
 	
 	
 	
-	<!-- 
-	how to clear canvas: a_canvas.width = a_canvas.width; 
-	or
-	clearRect (x, y, width, height) clears specific rectangular region on canvas
-	-->
+	
 	
 	
 	
